// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<color-picker> demo: > render [basic] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-medium">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <!----><input class="sd-color-picker-input" value="#165DFF">
    </div>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-medium">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <div class="sd-color-picker-value">#165DFF</div><input class="sd-color-picker-input" value="#165DFF">
    </div>
    <!---->
  </div>
</div>
`;

exports[`<color-picker> demo: > render [colors] correctly 1`] = `
<div class="sd-color-picker sd-color-picker-size-medium">
  <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
  <!----><input class="sd-color-picker-input" value="#165DFF">
</div>
`;

exports[`<color-picker> demo: > render [disabled] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-medium sd-color-picker-disabled">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <!----><input class="sd-color-picker-input" disabled="" value="#165DFF">
    </div>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-medium sd-color-picker-disabled">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <div class="sd-color-picker-value">#165DFF</div><input class="sd-color-picker-input" disabled="" value="#165DFF">
    </div>
    <!---->
  </div>
</div>
`;

exports[`<color-picker> demo: > render [format] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="hex"><span class="sd-radio-button-content">hex</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="rgb"><span class="sd-radio-button-content">rgb</span></label></span></div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-medium">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <div class="sd-color-picker-value">#165DFF</div><input class="sd-color-picker-input" value="#165DFF">
    </div>
    <!---->
  </div>
</div>
`;

exports[`<color-picker> demo: > render [only-panel] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 32px; row-gap: 32px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker-panel">
      <div class="sd-color-picker-palette" style="background-color: rgb(0, 78, 255);">
        <div class="sd-color-picker-handler" style="top: 0%; left: 91.37254901960785%;"></div>
      </div>
      <div class="sd-color-picker-panel-control">
        <div class="sd-color-picker-control-wrapper">
          <div>
            <div class="sd-color-picker-control-bar sd-color-picker-control-bar-hue">
              <div class="sd-color-picker-handler" style="left: 61.587982832618025%; color: rgb(22, 93, 255);"></div>
            </div>
            <div class="sd-color-picker-control-bar-bg">
              <div class="sd-color-picker-control-bar sd-color-picker-control-bar-alpha" style="background: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(22, 93, 255));">
                <div class="sd-color-picker-handler" style="left: 100%; color: rgb(22, 93, 255);"></div>
              </div>
            </div>
          </div>
          <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
        </div>
        <div class="sd-color-picker-input-wrapper"><span class="sd-select-view-single sd-select sd-color-picker-select sd-select-view sd-select-view-size-mini" title="Hex"><!----><input class="sd-select-view-input sd-select-view-input-hidden" readonly="" value=""><span class="sd-select-view-value">Hex</span><span class="sd-select-view-suffix"><!----><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
          <!----></span></span>
          <!---->
          <div class="sd-color-picker-group-wrapper">
            <div class="sd-input-group sd-color-picker-input-group"><span class="sd-input-wrapper sd-color-picker-input-hex"><span class="sd-input-prefix">#</span><input class="sd-input sd-input-size-mini" type="text" value="165DFF">
              <!---->
              <!----></span><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-mini sd-color-picker-input-alpha"><!----><input class="sd-input sd-input-size-mini" type="text" role="spinbutton" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" value="100"><!----><span class="sd-input-suffix"><!----><div class="sd-input-number-suffix">%</div><div class="sd-input-number-step"><button class="sd-input-number-step-button sd-input-number-step-button-disabled" type="button" tabindex="-1" disabled=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg></button><button class="sd-input-number-step-button" type="button" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></button></div><!----></span></span>
            </div>
          </div>
        </div>
      </div>
      <div class="sd-color-picker-panel-colors">
        <div class="sd-color-picker-colors-section">
          <div class="sd-color-picker-colors-text">最近使用颜色</div>
          <div class="sd-color-picker-colors-wrapper"><span class="sd-color-picker-colors-empty">暂无</span></div>
        </div>
        <div class="sd-color-picker-colors-section">
          <div class="sd-color-picker-colors-text">系统预设颜色</div>
          <div class="sd-color-picker-colors-wrapper">
            <div class="sd-color-picker-colors-list">
              <div class="sd-color-picker-color-block" style="background-color: rgb(0, 180, 42);">
                <div class="sd-color-picker-block" style="background-color: rgb(0, 180, 42);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(60, 126, 255);">
                <div class="sd-color-picker-block" style="background-color: rgb(60, 126, 255);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(255, 125, 0);">
                <div class="sd-color-picker-block" style="background-color: rgb(255, 125, 0);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(247, 105, 101);">
                <div class="sd-color-picker-block" style="background-color: rgb(247, 105, 101);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(247, 186, 30);">
                <div class="sd-color-picker-block" style="background-color: rgb(247, 186, 30);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(245, 49, 157);">
                <div class="sd-color-picker-block" style="background-color: rgb(245, 49, 157);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(217, 26, 217);">
                <div class="sd-color-picker-block" style="background-color: rgb(217, 26, 217);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(159, 219, 29);">
                <div class="sd-color-picker-block" style="background-color: rgb(159, 219, 29);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(250, 220, 25);">
                <div class="sd-color-picker-block" style="background-color: rgb(250, 220, 25);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(114, 46, 209);">
                <div class="sd-color-picker-block" style="background-color: rgb(114, 46, 209);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(52, 145, 250);">
                <div class="sd-color-picker-block" style="background-color: rgb(52, 145, 250);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(123, 225, 136);">
                <div class="sd-color-picker-block" style="background-color: rgb(123, 225, 136);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(147, 190, 255);">
                <div class="sd-color-picker-block" style="background-color: rgb(147, 190, 255);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(255, 207, 139);">
                <div class="sd-color-picker-block" style="background-color: rgb(255, 207, 139);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(251, 176, 167);">
                <div class="sd-color-picker-block" style="background-color: rgb(251, 176, 167);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(252, 233, 150);">
                <div class="sd-color-picker-block" style="background-color: rgb(252, 233, 150);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(251, 157, 199);">
                <div class="sd-color-picker-block" style="background-color: rgb(251, 157, 199);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(240, 142, 230);">
                <div class="sd-color-picker-block" style="background-color: rgb(240, 142, 230);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(220, 241, 144);">
                <div class="sd-color-picker-block" style="background-color: rgb(220, 241, 144);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(253, 250, 148);">
                <div class="sd-color-picker-block" style="background-color: rgb(253, 250, 148);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(195, 150, 237);">
                <div class="sd-color-picker-block" style="background-color: rgb(195, 150, 237);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(159, 212, 253);">
                <div class="sd-color-picker-block" style="background-color: rgb(159, 212, 253);"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker-panel sd-color-picker-panel-disabled">
      <div class="sd-color-picker-palette" style="background-color: rgb(0, 255, 205);">
        <div class="sd-color-picker-handler" style="top: 17.647058823529417%; left: 91.42857142857143%;"></div>
      </div>
      <div class="sd-color-picker-panel-control">
        <div class="sd-color-picker-control-wrapper">
          <div>
            <div class="sd-color-picker-control-bar sd-color-picker-control-bar-hue">
              <div class="sd-color-picker-handler" style="left: 46.70138888888889%; color: rgb(18, 210, 172);"></div>
            </div>
            <div class="sd-color-picker-control-bar-bg">
              <div class="sd-color-picker-control-bar sd-color-picker-control-bar-alpha" style="background: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(18, 210, 172));">
                <div class="sd-color-picker-handler" style="left: 100%; color: rgb(18, 210, 172);"></div>
              </div>
            </div>
          </div>
          <div class="sd-color-picker-preview" style="background-color: rgb(18, 210, 172);"></div>
        </div>
        <div class="sd-color-picker-input-wrapper"><span class="sd-select-view-single sd-select sd-color-picker-select sd-select-view sd-select-view-size-mini" title="Hex"><!----><input class="sd-select-view-input sd-select-view-input-hidden" readonly="" value=""><span class="sd-select-view-value">Hex</span><span class="sd-select-view-suffix"><!----><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
          <!----></span></span>
          <!---->
          <div class="sd-color-picker-group-wrapper">
            <div class="sd-input-group sd-color-picker-input-group"><span class="sd-input-wrapper sd-input-disabled sd-color-picker-input-hex"><span class="sd-input-prefix">#</span><input class="sd-input sd-input-size-mini" type="text" disabled="" value="12D2AC">
              <!---->
              <!----></span><span class="sd-input-wrapper sd-input-disabled sd-input-number sd-input-number-mode-embed sd-input-number-size-mini sd-color-picker-input-alpha"><!----><input class="sd-input sd-input-size-mini" type="text" disabled="" role="spinbutton" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" value="100"><!----><span class="sd-input-suffix"><!----><div class="sd-input-number-suffix">%</div><div class="sd-input-number-step"><button class="sd-input-number-step-button sd-input-number-step-button-disabled" type="button" tabindex="-1" disabled=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg></button><button class="sd-input-number-step-button sd-input-number-step-button-disabled" type="button" tabindex="-1" disabled=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></button></div><!----></span></span>
            </div>
          </div>
        </div>
      </div>
      <div class="sd-color-picker-panel-colors">
        <!---->
        <div class="sd-color-picker-colors-section">
          <div class="sd-color-picker-colors-text">系统预设颜色</div>
          <div class="sd-color-picker-colors-wrapper">
            <div class="sd-color-picker-colors-list">
              <div class="sd-color-picker-color-block" style="background-color: rgb(0, 180, 42);">
                <div class="sd-color-picker-block" style="background-color: rgb(0, 180, 42);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(60, 126, 255);">
                <div class="sd-color-picker-block" style="background-color: rgb(60, 126, 255);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(255, 125, 0);">
                <div class="sd-color-picker-block" style="background-color: rgb(255, 125, 0);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(247, 105, 101);">
                <div class="sd-color-picker-block" style="background-color: rgb(247, 105, 101);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(247, 186, 30);">
                <div class="sd-color-picker-block" style="background-color: rgb(247, 186, 30);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(245, 49, 157);">
                <div class="sd-color-picker-block" style="background-color: rgb(245, 49, 157);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(217, 26, 217);">
                <div class="sd-color-picker-block" style="background-color: rgb(217, 26, 217);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(159, 219, 29);">
                <div class="sd-color-picker-block" style="background-color: rgb(159, 219, 29);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(250, 220, 25);">
                <div class="sd-color-picker-block" style="background-color: rgb(250, 220, 25);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(114, 46, 209);">
                <div class="sd-color-picker-block" style="background-color: rgb(114, 46, 209);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(52, 145, 250);">
                <div class="sd-color-picker-block" style="background-color: rgb(52, 145, 250);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(123, 225, 136);">
                <div class="sd-color-picker-block" style="background-color: rgb(123, 225, 136);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(147, 190, 255);">
                <div class="sd-color-picker-block" style="background-color: rgb(147, 190, 255);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(255, 207, 139);">
                <div class="sd-color-picker-block" style="background-color: rgb(255, 207, 139);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(251, 176, 167);">
                <div class="sd-color-picker-block" style="background-color: rgb(251, 176, 167);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(252, 233, 150);">
                <div class="sd-color-picker-block" style="background-color: rgb(252, 233, 150);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(251, 157, 199);">
                <div class="sd-color-picker-block" style="background-color: rgb(251, 157, 199);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(240, 142, 230);">
                <div class="sd-color-picker-block" style="background-color: rgb(240, 142, 230);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(220, 241, 144);">
                <div class="sd-color-picker-block" style="background-color: rgb(220, 241, 144);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(253, 250, 148);">
                <div class="sd-color-picker-block" style="background-color: rgb(253, 250, 148);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(195, 150, 237);">
                <div class="sd-color-picker-block" style="background-color: rgb(195, 150, 237);"></div>
              </div>
              <div class="sd-color-picker-color-block" style="background-color: rgb(159, 212, 253);">
                <div class="sd-color-picker-block" style="background-color: rgb(159, 212, 253);"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<color-picker> demo: > render [size] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-mini">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <!----><input class="sd-color-picker-input" value="#165DFF">
    </div>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-small">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <!----><input class="sd-color-picker-input" value="#165DFF">
    </div>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-medium">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <!----><input class="sd-color-picker-input" value="#165DFF">
    </div>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-large">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <!----><input class="sd-color-picker-input" value="#165DFF">
    </div>
    <!---->
  </div>
</div>
`;

exports[`<color-picker> demo: > render [trigger] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button type="button" role="switch" aria-checked="false" class="sd-switch sd-switch-type-circle"><span class="sd-switch-handle"><span class="sd-switch-handle-icon"></span></span><!--  prettier-ignore  --><span class="sd-switch-text-holder">OFF</span><span class="sd-switch-text">OFF</span></button></div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-color-picker sd-color-picker-size-medium">
      <div class="sd-color-picker-preview" style="background-color: rgb(22, 93, 255);"></div>
      <!----><input class="sd-color-picker-input" value="#165DFF">
    </div>
    <!---->
  </div>
</div>
`;

exports[`<color-picker> demo: > render [trigger-element] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><span class="sd-tag sd-tag-size-medium sd-tag-checked sd-tag-custom-color" style="background-color: rgb(22, 93, 255);"><span class="sd-tag-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-bg-colors" style="color: rgb(255, 255, 255);" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="m9.442 25.25 10.351 10.765a1 1 0 0 0 1.428.014L32 25.25z"></path><path d="M19 5.25 22.75 9m0 0 12.043 12.043a1 1 0 0 1 0 1.414L32 25.25M22.75 9 8.693 23.057a1 1 0 0 0-.013 1.4l.762.793m0 0 10.351 10.765a1 1 0 0 0 1.428.014L32 25.25m-22.558 0H32M6 42h36"></path><path fill="currentColor" fill-rule="evenodd" stroke="none" d="M40.013 29.812 37.201 27l-2.812 2.812a4 4 0 1 0 5.624 0" clip-rule="evenodd"></path></svg></span> #165DFF
    <!--v-if-->
    <!--v-if--></span>
    <!---->
  </div>
</div>
`;
